# FleetingPasswordManager

./: .gitignore  CHANGELOG  CMakeLists.txt  INSTALL  INSTALL-LINUX  README  README.md  fleetingpm  fleetingpm-android.pro  fleetingpm.pro  setup.py
data/: fleetingpm.desktop.in  fleetingpm.desktop.opt.in
data/doc/: Instructions.qrc  instructions.html
data/icons/: Icons.qrc  Windows.rc
data/images/: Images.qrc
fleetingpm-android/: AndroidManifest.xml  project.properties
fleetingpm-android/res/layout/: activity_main.xml
fleetingpm-android/res/menu/: main.xml  main_activity_actions.xml
fleetingpm-android/res/values/: strings.xml
fleetingpm-android/src/com/fleetingpasswordmanager/: MainActivity.java  MasterPasswordWatcher.java  PasswordGenerator.java
fleetingpmlib/: AboutDlg.py  Icons.py  Images.py  MainWindow.py  SettingsDlg.py  Version.py
obsolete/: fleetingpm.pro
packaging/debian/: changelog  control  copyright  rules
packaging/windows/: fleetingpm.nsi
scripts/: archive.sh  genericLinuxBuildQt4  genericLinuxBuildQt5  mxeWindowsBuild  updatePPA.sh
src/: MainWindow.py  aboutdlg.cpp  aboutdlg.h  config.cpp  config.h  engine.cpp  engine.h  instructionsdlg.cpp  instructionsdlg.h  logindata.cpp  logindata.h  loginio.cpp  loginio.h  main.cpp  main.py  mainwindow.cpp  mainwindow.h  settingsdlg.cpp  settingsdlg.h  version.h
src/Qt/: config.h  engine.cpp  engine.h  logindata.h  loginio.h
src/old/: setup.py
src/old/fleetingpmlib/: AboutDlg.py  Engine.py  SettingsDlg.py
web/: index.html
